Change colors for now, waiting on color palette from client, add logo, fix spacings on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,19 @@ a:hover, a:focus {
 }
 
 body {
-    padding: 1em 0;
-    margin: .5rem .5rem 0 .5rem;
+    margin: 0;
     font-family: 'akiraEx', sans-serif;
     background-color: var(--background);
     color: var(--text);
 }
 
+header {
+    margin-block: 0;
+    background-color: var(--text);
+}
+
 img {
-    width: 100%;
+    inline-size: 100%;
 }
 
 hr {
@@ -47,22 +51,18 @@ hr {
 }
 
 .logo {
-    padding-inline-start: .75em;
-    max-width: 100%;
+    max-inline-size: 10%;
+    margin-inline-end: 2.5em;
     font-size: 2rem;
-}
-
-.logo > a {
     color: var(--accent);
     text-decoration: underline;
-}
-
-.logo > a:hover, .logo > a:focus {
-    color: var(--text);
+    position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .container {
-    width: 100%;
+    inline-size: 100%;
 }
 
 .flex-class {
@@ -71,8 +71,8 @@ hr {
 
 .nav-list {
     list-style: none;
-    justify-content: space-around;
-    padding-inline-end: .75em;
+    justify-content: space-between;
+    padding-inline: .25em;
 }
 
 .nav-item {
@@ -81,17 +81,19 @@ hr {
 
 .nav-link {
     text-decoration: none;
-    font-size: clamp(.75rem, 1.5vw + .5rem, 1.5rem);
+    font-size: clamp(.25rem, 1.5vw + .5rem, 1.5rem);
+    color: var(--background);
 }
 
 .media-scroller {
-    padding: 10em 0;
-    
+    padding: 10em 0 1.5em 0;
+    max-inline-size: min(100%, 100vw);
+
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: 65%;
     grid-template-rows: 100%;
-    gap: 1.5em;
+    gap: .25em;
 
     overflow-x: auto;
     overscroll-behavior-inline: contain;
@@ -99,7 +101,7 @@ hr {
 
 .snaps-inline {
     scroll-snap-type: inline mandatory;
-    scroll-padding-inline: 1rem;
+    scroll-padding-inline: 1em;
 }
 
 .snaps-inline > * {
@@ -125,26 +127,34 @@ hr {
 
 .media-element {
     display: flex;
-    gap: 1em;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-block-size: 75%;
-    padding: 1em;
+    padding: 0 1em;
+    margin: .5em;
     border-radius: 10%;
-    background-color: var(--primary);
-}
-
-.media-element > img {
-    inline-size: 100%;
-    block-size: 100%;
-    aspect-ratio: 16 / 9;
-    border-radius: 10%;
-    object-fit: cover;
+    background-color: var(--text);
 }
 
 .media-element > a {
-    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--background);
+}
+
+.media-element > a > img {
+    inline-size: 100%;
+    block-size: 100%;
+    padding: .75em;
+    aspect-ratio: 16 / 9;
+    border-radius: 15%;
+    object-fit: cover;
+}
+
+.media-element > a > p {
+    margin-block-start: -.1em;
 }
 
 .grow { 
@@ -159,23 +169,25 @@ hr {
     display: grid;
     grid-auto-flow: row;
     grid-template-columns: 1fr 1fr;
-    gap: 1.5em;
+    gap: .25em;
 }
 
 .call-to-action {
     margin-inline: 15%;
+    margin-block-start: 8em;
     padding: 1em;
-    background-color: var(--accent);
+    background-color: var(--text);
+    color: var(--background);
     border-radius: 100px;
     display: flex;
     justify-content: center;
     white-space: nowrap;
-    min-width: min-content;
+    min-inline-size: min-content;
 }
 
 .call-to-action:hover, .call-to-action:focus {
-    color: var(--accent);
-    background-color: var(--text);
+    color: var(--text);
+    background-color: var(--background);
 }
 
 .footer--container {
@@ -190,6 +202,10 @@ hr {
     text-align: center;
     justify-content: end;
     align-items: center;
+}
+
+@media (max-width: 400px) {
+
 }
 
 @media (min-width: 800px) {
